# discordgo

./: .gitignore  README.md  go.mod  voice.go  voice_test.go  wsapi.go
dave/: dave.go  decryptor.go  encryptor.go  frame.go  key_ratchet.go  libdave.go  session.go
dave/libdave_c/: CMakeLists.txt  libdave_c.cpp  libdave_c.h
scripts/: setup-dave.sh
